bin_PROGRAMS = $(top_builddir)/bin/evpencutil-gui $(top_builddir)/bin/evpencutil-cli
__top_builddir__bin_evpencutil_gui_SOURCES = src/gui.c src/crypt.c src/lib.c src/workthread.c
__top_builddir__bin_evpencutil_cli_SOURCES = src/cli.c src/crypt.c src/lib.c src/workthread.c

__top_builddir__bin_evpencutil_gui_CFLAGS = -Dgui $(GTK_CFLAGS)
__top_builddir__bin_evpencutil_gui_LDADD = $(GTK_LIBS)
